fix(button): fix vertical alignment on buttons

--- a/src/elements/numberinput/_numberinput.scss
+++ b/src/elements/numberinput/_numberinput.scss
@@ -2,6 +2,11 @@
   .#{$prefix}numberinput {
     > * {
       vertical-align: middle;
+
+      &.#{$prefix}button-icon {
+        display: inline-block;
+        vertical-align: middle;
+      }
     }
   }
 }
